feat: работающая отправка оценок, при прохождении с авторизацией через LTI